--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "mocha --compilers js:babel-core/register -- recursive",
     "build": "babel src --presets babel-preset-es2015 --out-dir build --source-maps",
     "browserify": "mkdir -p dist && browserify -r through -r duplexer -r ./build/index.js:nem-sdk > dist/nem-sdk.js",
-    "minify": "uglifyjs dist/nem-sdk.js > dist/nem-sdk.min.js",
+    "minify": "minify dist/nem-sdk.js > dist/nem-sdk.min.js",
     "version": "npm run build && npm run browserify && npm run minify && git add -A dist/",
     "postversion": "git push origin master && git push --tags",
     "postinstall": "npm run build"
@@ -21,11 +21,12 @@
   "license": "MIT",
   "dependencies": {
     "babel-cli": "^6.6.5",
-    "babel-preset-es2015": "^6.6.0",
     "babel-core": "^6.7.2",
     "babel-plugin-transform-inline-environment-variables": "^6.8.0",
+    "babel-preset-es2015": "^6.6.0",
     "crypto-js": "3.1.9-1",
     "jquery": "3.0.0",
+    "minify": "^6.0.0",
     "request": "2.81.0",
     "sockjs-client": "1.1.4"
   },
